--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.jmock</groupId>
     <artifactId>jmock-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.6.0</version>
+    <version>2.6.0-SNAPSHOT</version>
     <name>jMock Parent</name>
     <inceptionYear>2003</inceptionYear>
     <organization>
