--- a/maven/jmock-cglib/pom.xml
+++ b/maven/jmock-cglib/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jmock</groupId>
         <artifactId>jmock-parent</artifactId>
-        <version>2.6.0</version>
+        <version>2.6.0-SNAPSHOT</version>
     </parent>
     <artifactId>jmock-cglib</artifactId>
     <packaging>jar</packaging>
