--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.jmock</groupId>
     <artifactId>jmock-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.6.0</version>
     <name>jMock Parent</name>
     <inceptionYear>2003</inceptionYear>
     <organization>
@@ -30,7 +30,8 @@
         <connection>scm:git:git@github.com:jmock-developers/jmock-packaging.git</connection>
         <developerConnection>scm:git:git@github.com:jmock-developers/jmock-packaging.git</developerConnection>
         <url>https://github.com/jmock-developers/jmock-packaging.git</url>
-    </scm>
+      <tag>jmock-parent-2.6.0</tag>
+  </scm>
 
     <build>
         <plugins>
